# kryonix-brain-lightrag

./: .gitignore  AGENTS.md  EXPERIMENTAL_RUST.md  README.md  pyproject.toml  shell.nix
crates/kryonix-cag/: Cargo.toml
crates/kryonix-cag/src/: main.rs  manifest.rs  routing.rs  scanner.rs  security.rs
kryonix_brain_lightrag/: __init__.py  api.py  cag.py  cli.py  config.py  graph_utils.py  index.py  llm.py  obsidian_cli.py  query_utils.py  rag.py  routing.py  server.py  to_obsidian.py  utils.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs  main.rs  utils.rs  vault_scan.rs
scratch/: generate_mocs.py  inspect_entity_chunks.py  inspect_kv_relations.py  inspect_vdb_relations.py  test_mcp_call.py
tests/: test_brain_context_pack.py  test_cache_language_key.py  test_cli_doctor.py  test_config_paths.py  test_file_discovery_excludes.py  test_graph_integrity.py  test_manifest_ids.py  test_mcp_stdio_clean.py  test_mcp_tools_safe.py  test_no_cloud_imports.py  test_obsidian_path_guard.py  test_ollama_adapter_shape.py  test_ptbr_response_prompt.py  test_query_normalization.py  test_refine_cli.py  test_refine_filters.py  test_refine_report.py  test_refine_state.py  test_storage_guard.py  test_utils.py
