[project]
name = "kryonix-brain-lightrag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "lightrag-hku>=1.4.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.2.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "tenacity>=8.0",
    "nano-vectordb>=0.0.4",
    "aiofiles>=23.0",
    "tiktoken>=0.7",
    "pipmaster>=0.0.20",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "ollama>=0.6.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "PyYAML>=6.0.1",
    "prometheus-client>=0.20.0",
]

[project.scripts]
# Low-level (usado pelo MCP e pelos hooks)
kg-server      = "kryonix_brain_lightrag.server:main"
kg-index       = "kryonix_brain_lightrag.index:main"
kg-api         = "kryonix_brain_lightrag.api:main"
kg-to-obsidian = "kryonix_brain_lightrag.to_obsidian:main"

# High-level CLI unificado pro usuário final
rag            = "kryonix_brain_lightrag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kryonix_brain_rust"

[tool.hatch.build.targets.wheel]
packages = ["kryonix_brain_lightrag"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["result", "node_modules", ".direnv", "dist", "build", ".git", "target"]
markers = [
    "asyncio: mark test as async",
]
