[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "kryonix_brain_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "kryonix-brain-server"
path = "src/main.rs"

[[bin]]
name = "kryonix-vault-scan"
path = "src/vault_scan.rs"

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module", "auto-initialize"], optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2.5"
sha1 = "0.10"

[features]
default = []
python-bridge = ["pyo3"]
axum-server = ["axum", "tokio", "tower-http"]
